# media-crew

./: .dockerignore  .gitignore  CLAUDE.md  DELIVERY-CHECKLIST.md  Dockerfile  Dockerfile.frontend  Makefile  PROJECT-DASHBOARD.md  README_IMPLEMENTATION.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  keyword_search_20260324_024927.csv  keyword_search_20260324_025154.csv  keyword_search_20260324_025751.csv  pyproject.toml
.chats/oc_5193c9cdd3c64037d00eae0df8274b3e/: CLAUDE.md
.github/workflows/: ci.yml  deploy-pages.yml
.omc/: notepad.md  prd.json  progress.txt  project-memory.json
.omc/sessions/: 1edc1cf0-1d25-4706-9cdb-0203490c7b55.json  485436c2-7d7a-42e5-ba97-41b13fd659f2.json  5759aa7c-58cf-4c35-a129-7c42d308ede7.json  5fc64e9d-39c6-46bf-8d8a-f7d4fcbf3bf6.json  fa41d07b-27cc-4a18-8cbb-0083c07f2e99.json
content/: zhihu_agent_engineering.md
database/: schema.sql
database/migrations/: add_taste_tables.sql
docs/: FINAL-REPORT.md  IMPLEMENTATION-COMPLETE.md  architecture_improvement_proposal.md  multi_agent_dashboard_prd.md  platform_operation_guidelines.md  progress.txt  system_architecture.md  upgrade_plan_v2.md  viral_content_templates.md  xiaohongshu_viral_content_research.md  zhihu_operation_guide.md
docs/architecture/: agent_architecture_design.md  rag_knowledge_base.md  tech_selection_report.md
docs/content-samples/: wechat_ai_security.md  xiaohongshu_agent_tools.md
docs/prd/: tastecraft-self-use.md
docs/research/: douyin_viral_script.md  e2e_test_report.md  viral_reference_implementation_summary.md  viral_reference_validation_guide.md  zhihu_viral.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: 404.html
frontend/src/: App.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: AgentsPage.tsx  AnalyticsPage.tsx  ClientDetailPage.tsx  ClientsPage.tsx  ContentCreatePage.tsx  ContentDraftsPage.tsx  ContentPage.tsx  ContentReviewPage.tsx  CrewsPage.tsx  DashboardPage.tsx  ImagesPage.tsx  PublishPage.tsx  SearchPage.tsx  TasksPage.tsx
migrations/: env.py
migrations/versions/: ab5431288062_add_workspace_tables_client_account_hot_.py
reports/: NoAccountCorp_weekly_20260324.md  NoAccountCorp_weekly_20260325.md  NoAccountCorp_weekly_20260328.md  NoAccountCorp_weekly_20260330.md  ReportCorp_weekly_20260324.md  ReportCorp_weekly_20260325.md  ReportCorp_weekly_20260328.md  ReportCorp_weekly_20260330.md  Test Corp_weekly_20260330.md  测试客户A_weekly_20260330.md
scripts/: adapt_xiaohongshu.py  cdp_phase1_test.py  cdp_visual_test.py  config_wechat_ip.py  e2e_test.py  extract_final.py  extract_output.py  extract_output_final.py  extract_output_v2.py  extract_output_v3.py  extract_output_v4.py  fill_wechat_ip.py  run_content_crew.py  run_e2e_pipeline.py  run_publish.py  test_run_crew.py  xhs_draft.py
skills/chinese-social-media-operation/: SKILL.md
skills/viral-research/: SKILL.md
src/: main.py
src/agents/: __init__.py  base_agent.py  content_creator.py  content_orchestrator.py  content_reviewer.py  content_writer.py  copywriter.py  data_analyst.py  designer.py  marketer.py  onboarding.py  platform_adapter.py  platform_publisher.py  researcher.py  topic_researcher.py
src/api/: main.py  ws.py
src/core/: __init__.py  audit.py  auth.py  error_handling.py  exceptions.py  logging.py
src/crew/: callbacks.py
src/models/: __init__.py  account.py  agent.py  analytics.py  client.py  content.py  hot_topic.py  metrics.py  publish_log.py  task.py  taste.py
src/schemas/: __init__.py  account.py  analytics_report.py  client.py  content_brief.py  content_draft.py  publish_result.py  taste_profile.py  validation.py
src/services/: account_service.py  client_service.py  content_service.py  cookie_manager.py  data_collector.py  image_generator.py  metrics_service.py  publish_engine_v2.py  rate_limiter.py  scheduler.py  task_queue.py  taste_engine.py
src/tastecraft/: __init__.py  __main__.py
src/tools/: __init__.py  analytics_tools.py  base_tool.py  content_tools.py  research.py  search_tools.py  viral_reference.py
src/utils/: retry.py
tests/: conftest.py
tests/integration/: test_content_crew.py
tests/unit/: test_account_service.py  test_agents.py  test_api_routes.py  test_auth_validation.py  test_base_tool.py  test_client_service.py  test_config.py  test_content_service.py  test_cookie_manager.py  test_data_collector.py  test_data_collector_extra.py  test_image_generator.py  test_metrics_service.py  test_models.py  test_overseas_sdk.py  test_platform_base.py  test_platform_bilibili.py  test_platform_douyin.py  test_platform_init.py  test_platform_overseas.py  test_platform_search.py  test_platform_search_api.py  test_platform_wechat.py  test_platform_weibo.py  test_platform_xiaohongshu.py  test_platform_zhihu.py  test_publish_engine_v2.py  test_rate_limiter.py  test_research_tools.py  test_retry.py  test_scheduler_service.py  test_schemas.py  test_task_queue.py  test_taste_engine.py  test_taste_profile.py  test_tools.py  test_viral_reference.py  test_wechat_tool.py
(+117 files in other folders)
